--- a/index.html
+++ b/index.html
@@ -1,3 +1,259 @@
-<script>
-    location.href='https://www.monotaro.com/';
-</script>
+<!doctype html>
+<html lang="ja">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>無能のホームページ</title>
+    <meta name="description" content="無能のホームページ。サボるのが得意な無能太郎の自己紹介サイト。スキルやポートフォリオ（途中放置プロジェクト）をユーモアたっぷりに紹介。診断ボタンで遊べます。">
+
+  <style>
+    :root{
+      --bg:#0f1724;
+      --card:#0b1220;
+      --accent:#ff6b6b;
+      --muted:#9aa4b2;
+      --glass: rgba(255,255,255,0.03);
+      --radius:12px;
+      --maxw:1000px;
+      font-family: "Helvetica Neue", Arial, sans-serif;
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      background:
+        radial-gradient(1000px 600px at 10% 10%, rgba(255,107,107,0.06), transparent 10%),
+        radial-gradient(800px 500px at 90% 90%, rgba(45,125,255,0.04), transparent 10%),
+        var(--bg);
+      color:#e6eef6;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      line-height:1.5;
+      padding:40px 20px;
+      display:flex;
+      justify-content:center;
+      align-items:flex-start;
+      min-height:100vh;
+    }
+    .wrap{
+      width:100%;
+      max-width:var(--maxw);
+    }
+    header{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      gap:16px;
+      margin-bottom:28px;
+    }
+    .brand{
+      display:flex;
+      gap:14px;
+      align-items:center;
+    }
+    .logo{
+      width:64px;height:64px;border-radius:14px;
+      background:linear-gradient(135deg,var(--accent),#ffd27a);
+      display:flex;align-items:center;justify-content:center;
+      font-weight:700;font-size:28px;color:#111;
+      box-shadow:0 6px 18px rgba(0,0,0,0.5);
+    }
+    h1{margin:0;font-size:22px}
+    p.lead{margin:0;color:var(--muted);font-size:14px}
+
+    nav a{
+      color:var(--muted);
+      text-decoration:none;
+      margin-left:12px;
+      font-size:14px;
+    }
+
+    main{
+      display:grid;
+      grid-template-columns: 1fr 360px;
+      gap:20px;
+      align-items:start;
+    }
+
+    /* left column */
+    .card{
+      background:linear-gradient(180deg, rgba(255,255,255,0.02), var(--glass));
+      border-radius:var(--radius);
+      padding:20px;
+      box-shadow: 0 6px 20px rgba(2,6,23,0.6);
+      border: 1px solid rgba(255,255,255,0.03);
+    }
+    .hero{
+      display:flex;gap:16px;align-items:center;
+    }
+    .avatar{
+      width:88px;height:88px;border-radius:12px;
+      background:linear-gradient(180deg,#1e293b, #0b1220);
+      display:flex;align-items:center;justify-content:center;
+      font-size:44px;
+      box-shadow: inset 0 -6px 18px rgba(0,0,0,0.6);
+    }
+    .hero h2{margin:0;font-size:20px}
+    .hero p{margin:6px 0 0 0;color:var(--muted);font-size:14px}
+
+    .section{margin-top:18px}
+    .skills{display:flex;flex-direction:column;gap:10px}
+    .skill{
+      display:flex;justify-content:space-between;align-items:center;font-size:13px;
+    }
+    .bar{
+      height:10px;background:rgba(255,255,255,0.04);border-radius:8px;overflow:hidden;width:100%;margin-top:6px;
+    }
+    .bar > i{display:block;height:100%;background:linear-gradient(90deg,var(--accent), #ff9a9a);border-radius:8px}
+
+    .projects{display:grid;grid-template-columns:repeat(2,1fr);gap:10px;margin-top:8px}
+    .project{background:rgba(255,255,255,0.02);padding:10px;border-radius:8px;font-size:14px;color:var(--muted)}
+
+    /* right column */
+    aside .card{position:sticky;top:40px;}
+    .test{
+      display:flex;gap:8px;align-items:center;margin-top:8px;
+    }
+    button{
+      background:linear-gradient(90deg,var(--accent), #ff9a9a);
+      border:none;padding:10px 12px;border-radius:10px;color:#111;font-weight:700;cursor:pointer;
+      box-shadow:0 6px 18px rgba(255,107,107,0.12);
+    }
+    .result{
+      margin-top:12px;padding:12px;border-radius:10px;background:rgba(255,255,255,0.02);color:var(--muted);
+    }
+
+    footer{margin-top:28px;color:var(--muted);font-size:13px;text-align:center}
+
+    /* smaller screens */
+    @media (max-width:900px){
+      main{grid-template-columns:1fr}
+      aside .card{position:static}
+    }
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <header>
+      <div class="brand">
+        <div class="logo">無</div>
+        <div>
+          <h1>無能のホームページ</h1>
+          <p class="lead">ここは誇らしい無能のための公式(?)サイトです。</p>
+        </div>
+      </div>
+      <nav>
+        <a href="#about">自己紹介</a>
+        <a href="#skills">スキル</a>
+        <a href="#projects">ポートフォリオ</a>
+      </nav>
+    </header>
+
+    <main>
+      <div>
+        <section class="card hero" id="about">
+          <div class="avatar" aria-hidden="true">😅</div>
+          <div>
+            <h2>無能 太郎</h2>
+            <p>いつも一生懸命サボることで生き延びてきたタイプ。成果は期待しないで。</p>
+            <div class="section">
+              <strong>ひとこと</strong>
+              <p style="margin:8px 0 0 0;color:var(--muted);">頑張るより休むのが得意。締切は友達ではない。</p>
+            </div>
+          </div>
+        </section>
+
+        <section class="card section" id="skills">
+          <h3>スキルセット</h3>
+          <div class="skills">
+            <div>
+              <div class="skill"><span>遅刻率</span><span>98%</span></div>
+              <div class="bar"><i style="width:98%"></i></div>
+            </div>
+            <div>
+              <div class="skill"><span>メール未読</span><span>92%</span></div>
+              <div class="bar"><i style="width:92%"></i></div>
+            </div>
+            <div>
+              <div class="skill"><span>集中力</span><span>12%</span></div>
+              <div class="bar"><i style="width:12%"></i></div>
+            </div>
+          </div>
+        </section>
+
+        <section class="card section" id="projects">
+          <h3>ポートフォリオ（概念的）</h3>
+          <div class="projects">
+            <div class="project">
+              <strong>プロジェクトA</strong>
+              <p style="margin:6px 0 0 0;color:var(--muted);font-size:13px">途中で放置したアイデア。発火しない。</p>
+            </div>
+            <div class="project">
+              <strong>プロジェクトB</strong>
+              <p style="margin:6px 0 0 0;color:var(--muted);font-size:13px">READMEが長すぎて誰も読まない。</p>
+            </div>
+            <div class="project">
+              <strong>プロジェクトC</strong>
+              <p style="margin:6px 0 0 0;color:var(--muted);font-size:13px">ビルドに成功したが動かない。</p>
+            </div>
+            <div class="project">
+              <strong>プロジェクトD</strong>
+              <p style="margin:6px 0 0 0;color:var(--muted);font-size:13px">デプロイ忘れ常習犯。</p>
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <aside>
+        <div class="card">
+          <h3>能力診断ツール</h3>
+          <p style="color:var(--muted);font-size:13px;margin:6px 0 10px 0">ボタンを押すだけで無能判定（冗談）</p>
+          <div class="test">
+            <button id="testBtn">診断する</button>
+            <button id="resetBtn" style="background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted);padding:8px 10px;">リセット</button>
+          </div>
+          <div id="result" class="result">まだ診断されていません。</div>
+
+          <div class="section" style="margin-top:14px">
+            <h4>連絡先</h4>
+            <p style="color:var(--muted);font-size:13px;margin:6px 0 0 0">メール: <em>nobody@example.com</em></p>
+            <p style="color:var(--muted);font-size:13px;margin:6px 0 0 0">住所: どこかのソファ</p>
+          </div>
+        </div>
+      </aside>
+    </main>
+
+    <footer>
+      © <span id="year"></span> 無能のホームページ — 作成者: 無能太郎（仮名）
+    </footer>
+  </div>
+
+  <script>
+    // 初期化
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    const messages = [
+      "診断結果: 驚くほど無能。休憩を推奨。",
+      "診断結果: 能力保留。コーヒーを飲んでから再試行。",
+      "診断結果: 遅刻の達人。時計が敵。",
+      "診断結果: 天才かもしれない。単にやる気が隠れているだけ。",
+      "診断結果: コードは動かないが気持ちは穏やか。"
+    ];
+
+    const btn = document.getElementById('testBtn');
+    const reset = document.getElementById('resetBtn');
+    const out = document.getElementById('result');
+
+    btn.addEventListener('click', () => {
+      // ランダムに結果を出す（演出）
+      const i = Math.floor(Math.random()*messages.length);
+      out.textContent = messages[i];
+      out.style.color = '#ffd27a';
+    });
+
+    reset.addEventListener('click', () => {
+      out.textContent = "まだ診断されていません。";
+      out.style.color = "";
+    });
+  </script>
+</body>
+</html>
